# prime-sort

./: README.md  pyproject.toml  requirements.txt
prime_sort/: utils.py
